--- a/templates/_partials/CheckoutStateProvince.twig
+++ b/templates/_partials/CheckoutStateProvince.twig
@@ -5,8 +5,9 @@
     <input
         type="text"
         name="stateProvince"
-        class="input CheckoutForm__Input"
+        class="input CheckoutForm__Input JSCheckoutForm__Input--UpdateWatch"
         placeholder="i.e. Tennessee"
+        value="{{ value }}"
         required
     >
 </label>
