Dynamically update the pricing on the dom

--- a/templates/_core/Cart.twig
+++ b/templates/_core/Cart.twig
@@ -21,6 +21,7 @@
                             method="post"
                             accept-charset="UTF-8"
                             class="CheckoutForm JSCheckoutForm"
+                            data-cart-pricing-info-url="{{ siteUrl() }}cart/pricing-info"
                             novalidate
                         >
                             {{ csrfInput() }}
