--- a/assetsSource/css/utilities.pcss
+++ b/assetsSource/css/utilities.pcss
@@ -15,3 +15,13 @@ pre[class*="language-"] {
 .select {
     -moz-appearance:none;
 }
+
+.input--has-error,
+.input--has-error:hover,
+.input--has-error:focus,
+.select--has-error,
+.select--has-error:hover,
+.select--has-error:focus {
+    border-color: var(--orange);
+    margin-bottom: 0;
+}
