Add JavaScript to remove errors from inputs as the inputs are updated

--- a/templates/_core/Cart.twig
+++ b/templates/_core/Cart.twig
@@ -42,7 +42,7 @@
                             <section class="CheckoutForm__Section CheckoutForm__Section--FirstSection">
                                 <h2 class="CheckoutForm__SectionHeader">Billing</h2>
                                 <div class="CheckoutForm__LabelGroupWrapper CheckoutForm__LabelGroupWrapper--Dual">
-                                    <label class="label CheckoutForm__Label CheckoutForm__Label--Required">
+                                    <label class="label CheckoutForm__Label CheckoutForm__Label--Required input-parent">
                                         Phone Number
                                         <input
                                             type="text"
@@ -62,7 +62,7 @@
                                             </ul>
                                         {% endif %}
                                     </label>
-                                    <label class="label CheckoutForm__Label CheckoutForm__Label--Required">
+                                    <label class="label CheckoutForm__Label CheckoutForm__Label--Required input-parent">
                                         Country
                                         <select
                                             name="country"
@@ -93,7 +93,7 @@
                                     </label>
                                 </div>
                                 <div class="CheckoutForm__LabelGroupWrapper CheckoutForm__LabelGroupWrapper--Dual">
-                                    <label class="label CheckoutForm__Label CheckoutForm__Label--Required">
+                                    <label class="label CheckoutForm__Label CheckoutForm__Label--Required input-parent">
                                         Full Name
                                         <input
                                             type="text"
@@ -113,7 +113,7 @@
                                             </ul>
                                         {% endif %}
                                     </label>
-                                    <label class="label CheckoutForm__Label">
+                                    <label class="label CheckoutForm__Label input-parent">
                                         Company
                                         <input
                                             type="text"
@@ -133,7 +133,7 @@
                                         {% endif %}
                                     </label>
                                 </div>
-                                <label class="label CheckoutForm__Label CheckoutForm__Label--Required">
+                                <label class="label CheckoutForm__Label CheckoutForm__Label--Required input-parent">
                                     Address
                                     <input
                                         type="text"
@@ -153,7 +153,7 @@
                                         </ul>
                                     {% endif %}
                                 </label>
-                                <label class="label CheckoutForm__Label">
+                                <label class="label CheckoutForm__Label input-parent">
                                     Address Line 2
                                     <input
                                         type="text"
@@ -172,7 +172,7 @@
                                         </ul>
                                     {% endif %}
                                 </label>
-                                <label class="label CheckoutForm__Label CheckoutForm__Label--Required">
+                                <label class="label CheckoutForm__Label CheckoutForm__Label--Required input-parent">
                                     City
                                     <input
                                         type="text"
@@ -197,7 +197,7 @@
                                         value: cartModel.stateProvince,
                                         errors: checkoutInputErrors['stateProvince'] ?? {}
                                     } only %}
-                                    <label class="label CheckoutForm__Label CheckoutForm__Label--Required">
+                                    <label class="label CheckoutForm__Label CheckoutForm__Label--Required input-parent">
                                         Postal Code
                                         <input
                                             type="text"
@@ -233,7 +233,7 @@
                             <section class="CheckoutForm__Section CheckoutForm__Section--SecondSection">
                                 <h2 class="CheckoutForm__SectionHeader">Payment</h2>
                                 <div class="CheckoutForm__LabelGroupWrapper CheckoutForm__LabelGroupWrapper--Dual">
-                                    <label class="label CheckoutForm__Label CheckoutForm__Label--Required CheckoutForm__Label--TwoThirds">
+                                    <label class="label CheckoutForm__Label CheckoutForm__Label--Required CheckoutForm__Label--TwoThirds input-parent">
                                         Credit Card Number
                                         <input
                                             type="text"
@@ -252,7 +252,7 @@
                                             </ul>
                                         {% endif %}
                                     </label>
-                                    <label class="label CheckoutForm__Label CheckoutForm__Label--Required CheckoutForm__Label--OneThird">
+                                    <label class="label CheckoutForm__Label CheckoutForm__Label--Required CheckoutForm__Label--OneThird input-parent">
                                         CVC
                                         <input
                                             type="text"
@@ -272,7 +272,7 @@
                                         {% endif %}
                                     </label>
                                 </div>
-                                <label class="label CheckoutForm__Label CheckoutForm__Label--Required">
+                                <label class="label CheckoutForm__Label CheckoutForm__Label--Required input-parent">
                                     Expiration
                                     <span class="CheckoutForm__LabelGroupWrapper CheckoutForm__LabelGroupWrapper--Dual">
                                         <select
