--- a/templates/_partials/CheckoutStateProvince.twig
+++ b/templates/_partials/CheckoutStateProvince.twig
@@ -1,7 +1,7 @@
 {% set value = value|default(null) %}
 {% set errors = errors|default([]) %}
 
-<label class="label CheckoutForm__Label CheckoutForm__Label--Required JSCheckoutForm__StateProvinceLabel">
+<label class="label CheckoutForm__Label CheckoutForm__Label--Required JSCheckoutForm__StateProvinceLabel input-parent">
     State/Province
     <input
         type="text"
